# AfUI

./: .gitignore  CMakeLists.txt  CMakeLists_ggcbuild.bat  CMakeLists_ggcdebug.bat  CMakeLists_ggcrelease.bat  CMakeLists_visualstudio.bat
cmake/: imgui.cmake  sdl3.cmake
sources/AfUI/: AfUI.h  AfUI_context.cpp  AfUI_context.h  AfUI_dom.h  AfUI_elements.h  AfUI_node.cpp  AfUI_node.h  AfUI_platform.h  AfUI_render.h  AfUI_rendertree.h  AfUI_types.h  AfUI_types_ex.h  AfUI_vars.cpp  AfUI_vars.h  cpp_includes.h  cpp_macros.h  cpp_placement_new.h  cpp_tools.h  cpp_types.h
sources/AfUI/elements/: block_circle_color.h  block_imagebutton.h  control_multitextedit.h  control_slider.h  roadmap_ui_elements.txt  view_scroll.h
sources/main/: appicon.h  appicon.rc  imgui_impl_sdl3.cpp  main.cpp
